# Algorithms

./: AutumnHomework.cpp  CMakeLists.txt  README.md  SumOfN!.c
ProblemDescription/: BitComparison.md  CryptographicTable.md  DominoProblem.md
include/: BitComparison.hpp  CryptographicTable.hpp
src/: BitComparison.cpp  CryptographicTable.cpp  Power.c  SumOfN!.c
tests/: BitComparisonTests.cpp  CryptoGraphicTests.cpp
